Feature 1/init project
* init project

* init project

* update logic

* update logic

* add settings

* add settings

* update config to work with older version

* setting up ui tests

* setting up ui tests

* add unit and ui tests

* update ui tests (what a painful experience)

* improve ui test for settings

* improve ui test for settings

* fix codana suggestions

* update readme

---------

Co-authored-by: Adrian J <anjo@gft.com>